URL Shortener frontend completed

--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,43 @@
   place-items: center;
   color:green;
 }
+
+.url-list-container {
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: darkcyan;
+}
+
+.url-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+}
+
+.url-table th, .url-table td {
+  border: 1px solid #ccc;
+  padding: 10px;
+  text-align: left;
+}
+
+.url-table th {
+  background-color: #f5f5f5;
+}
+
+.url-table a{
+  color:white;
+  text-decoration: none;
+}
+
+.url-table a:hover {
+  text-decoration: underline;
+  color: blue;
+}
+
+.A
+{
+  color: white;
+}
